--- a/p2/css/style.css
+++ b/p2/css/style.css
@@ -45,7 +45,7 @@ h1,h2,h3,h4,h5,h6,label,p{
 	background: #EBBA02;	
 }
 .header-bottom{
-	background:url(../images/body_bg.png);
+	background:url(../images/simp.jpg);
 	padding:0 20px;
 }
 .top-nav{
@@ -69,8 +69,8 @@ h1,h2,h3,h4,h5,h6,label,p{
 }
 .top-nav li a:hover,.top-nav li.active a{
 	background:#181818;	
-	color:#B1599B;
-	border-top:5px solid #B1599B;
+	color:yellow;
+	border-top:5px solid yellow;
 	text-decoration:none;
 }
 .top-nav span.menu {
@@ -158,7 +158,7 @@ h1,h2,h3,h4,h5,h6,label,p{
 	text-decoration:none;
 }
 .simply h4 a:hover{
-	color:#B1599B;
+	color:yellow;
 }
 .simply p{
 	color:#787878;
@@ -176,7 +176,7 @@ h1,h2,h3,h4,h5,h6,label,p{
 }
 .content-grid h3{
 	font-size:2em;
-	color:#B1599B;
+	color:yellow;
 	font-weight:600;
 font-family: 'Oswald', sans-serif;	
 }
@@ -207,7 +207,7 @@ font-family: 'Oswald', sans-serif;
 	text-decoration:none;	
 }
 .grid-middle ul li a i{
-	background:#B1599B;
+	background:yellow;
 	width:6px;
 	height:6px;
 	display:inline-block;
@@ -215,7 +215,7 @@ font-family: 'Oswald', sans-serif;
 	margin: 0 8px 0px;
 }
 .grid-middle ul li a:hover{
-	color:#B1599B;
+	color:yellow;
 	padding: 0.5em 0 0.5em 0.3em; 
 		
 }
@@ -238,7 +238,7 @@ font-family: 'Oswald', sans-serif;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
   text-decoration:none;
-  background:#B1599B;
+  background:#a3a304;
   padding: 0.7em 1.3em;
   font-size: 1em;
 	color: #fff;
@@ -297,14 +297,14 @@ font-family: 'Oswald', sans-serif;
 /*----*/
 .cur-right h3{
 	font-size:2em;
-	color:#B1599B;
+	color:yellow;
 	font-weight:600;
 	font-family: 'Oswald', sans-serif;
 }
 a.more-info{
 	text-decoration: none;
 	font-size: 1em;
-	color:#B1599B ;
+	color:yellow;
 	padding: 0.7em 0em;
 }
 a.more-info:hover{
@@ -356,7 +356,7 @@ a.more-info i{
 	line-height:1.5em;
 }
 .our-grid h6 a{
-	color:#B1599B;
+	color:yellow;
 	text-decoration:none;
 }
 .our-grid h6 a:hover{
@@ -376,7 +376,7 @@ a.more-info i{
 span.in-sed{
 	font-size:2.5em;
 	color:#fff;
-	background:#B1599B;
+	background:yellow;
 	width: 55px;
 	height: 55px;
 	text-align: center;
@@ -394,7 +394,7 @@ font-size:1.3em;
 	line-height:1.3em;
 }
 .left-sit h6 a{
-	color:#B1599B;
+	color:yellow;
 	text-decoration:none;
 }
 .left-sit h6 a:hover{
@@ -427,7 +427,7 @@ font-size:1.3em;
 	font-weight: 700;
 }
 .team-top  h6 a{
-	color: #B1599B;
+	color: yellow;
 	text-decoration:none;
 }
 .team-top  h6 a:hover{
@@ -445,7 +445,7 @@ font-size:1.3em;
 	text-align:center;
 }
 .four h3 {
-	color: #B1599B;
+	color: yellow;
 	font-size: 7em;
 	
 }
@@ -462,7 +462,7 @@ font-size:1.3em;
 	  margin: 0.8em 0 0;
 }
 .blog_box h3 a{
-	color:#B1599B;
+	color:yellow;
 }
 .blog_box h3 a:hover{
 	color:#fff;
@@ -485,7 +485,7 @@ font-size:1.3em;
 }
 .links ul li a{	
 	text-decoration:none;
-	color:#B1599B;
+	color:yellow;
 }
 .links ul li a:hover{	
 	color:#fff;
@@ -505,10 +505,10 @@ ul.start li a{
 	padding:0.5em 1em;
 }
 ul.start li a:hover{
-	background:#B1599B;
+	background:yellow;
 }
 ul.start li span{
-	background:#B1599B;
+	background:yellow;
 	color:#fff;
 	font-size:1.2em;
 	padding:0.5em 1em;
@@ -560,7 +560,7 @@ p.your-para{
 .send input[type="submit"]{
 	width: 30%;
 	font-size: 1.3em;
-	background: #B1599B;
+	background: #aaaa06;
 	padding: 0.4em 0.8em;
 	text-align: center;
 	color: #fff;
@@ -583,7 +583,7 @@ p.your-para{
 p.sed-para{
 	font-size: 1.3em;
 	padding:0.4em 0;
-	color:#B1599B;
+	color:yellow;
 }
 .address-more,.address-left{
 	float:left;
@@ -621,7 +621,7 @@ p.sed-para{
 .table-form input[type="submit"]{
 	width: 13%;
 	font-size: 1.3em;
-	background: #B1599B;
+	background: yellow;
 	padding: 0.4em 0.8em;
 	text-align: center;
 	color: #fff;
@@ -653,7 +653,7 @@ p.sed-para{
 }
 .sed-in h4{
 	font-size: 1.5em;
-	color: #B1599B;
+	color: yellow;
 	font-weight: 600;
 }
 .sed-in p,p.at-in{
@@ -678,7 +678,7 @@ p.at-in{
 }
 .post-top h6 {
 	font-size: 1.5em;
-	color: #B1599B;
+	color: yellow;
 	padding:0.3em 0;
 }
 .post-top p{
@@ -708,7 +708,7 @@ p.at-in{
 	line-height: 1.6em;
 }
 .amet-sed p a{
-	color:#B1599B;
+	color:yellow;
 	text-decoration:none;
 }
 .amet-in ul li{
@@ -762,7 +762,7 @@ ul.social-in li a:hover {
   text-align: center;
   padding: 20px 0;
   background: url(../images/pattern.png);
-  border-bottom: 5px solid #B1599B;
+  border-bottom: 5px solid yellow;
 }
 .copy p{
   font-size:1em;
@@ -770,7 +770,7 @@ ul.social-in li a:hover {
 }
 .copy p a{
   text-decoration:none;
-  color:#B1599B;
+  color:yellow;
 }
 .copy p a:hover{
   text-decoration:none;
@@ -813,7 +813,7 @@ span.menu{
 	z-index: 9999;
 	left: 2%;
 	margin:2em 0em;
-	background:#B1599B;
+	background:yellow;
 	border:0;
 }
 .top-nav span.menu{
