--- a/p2/css/style.css
+++ b/p2/css/style.css
@@ -69,8 +69,8 @@ h1,h2,h3,h4,h5,h6,label,p{
 }
 .top-nav li a:hover,.top-nav li.active a{
 	background:#181818;	
-	color:yellow;
-	border-top:5px solid yellow;
+	color:#a5a501;
+	border-top:5px solid #b2b900;
 	text-decoration:none;
 }
 .top-nav span.menu {
@@ -813,7 +813,7 @@ span.menu{
 	z-index: 9999;
 	left: 2%;
 	margin:2em 0em;
-	background:yellow;
+	background:#cb0000;
 	border:0;
 }
 .top-nav span.menu{
